--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "vnscriptkid",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.2",
+    "express": "^4.16.2",
     "mongodb": "^2.2.33",
     "mongoose": "^4.12.2"
   }
